# api/src/routes/game.route.ts
@@ -1,0 +1,11 @@
+import express from 'express';
+import { startGame, makeMove, gameHistory } from '../controllers/game.controller';
+import { authenticateJWT } from '../middlewares/userInfo.middlewares';
+
+const gameRouter = express.Router();
+
+gameRouter.post('/new-game', authenticateJWT, startGame);
+gameRouter.post('/make-move', authenticateJWT, makeMove);
+gameRouter.get('/history/:userId', authenticateJWT, gameHistory);
+
+export default gameRouter;
